src/objects/Masking_Object__c.object
<CustomObject>
    <description>Used to configure the object which data needs to be masked.</description>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsMaskRun__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMaskRun</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Masked_Field__c</fullName>
        <description>Used to store the API name of field which describes whether masking has been already performed.</description>
        <label>Is Masked Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL_Query__c</fullName>
        <label>SOQL Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Masking Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Masking Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Masking_Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>